k8s/prd/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started
  namespace: prd
  labels:
    app: getting-started
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getting-started
  template:
    metadata:
      labels:
        app: getting-started
    spec:
      nodeSelector:
        role: app
      containers:
        - name: getting-started
          image: localhost:5000/getting-started-prd:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
kind: Service
apiVersion: v1  
metadata:
  name: getting-started
  namespace: prd
spec:
  type: ClusterIP
  selector:
    app: getting-started
  ports:
  - name: http-metrics
    port: 8080
    targetPort: 8080
---
