k8s/prd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: prd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /prd/hello-app
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
---
